re PR tree-optimization/34966 (ICE: verify_ssa fails when optimization trigonometric code)

2008-01-25  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/34966
	* tree-ssa-math-opts.c (execute_cse_sincos_1): For all but
	default defs and PHI_NODEs we have to insert after the
	defining statement.

	* gcc.c-torture/compile/pr34966.c: New testcase.

From-SVN: r131824